--- a/playbooks/roles/calico/files/service/calico-bird6.service
+++ b/playbooks/roles/calico/files/service/calico-bird6.service
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 Restart=on-failure
-ExecStartPre=/usr/bin/mkdir -p /var/run/calico
+ExecStartPre=/usr/bin/env mkdir -p /var/run/calico
 ExecStart=/usr/bin/bird6 -R -s /var/run/calico/bird6.ctl -d -c /etc/calico/confd/config/bird6.cfg
 
 [Install]
