--- a/playbooks/roles/collectd/tasks/main.yaml
+++ b/playbooks/roles/collectd/tasks/main.yaml
@@ -6,9 +6,13 @@
 
 - set_fact: collectd_version="5.5.1"
 
-# Patched collectd for DATA_MAX_NAME_LEN
-- name: install collectd
+- name: install collectd(CentOS)
   yum: pkg=collectd-{{ collectd_version }}
+  when: ansible-distribution=="CentOS"
+
+- name: install collectd(Ubuntu)
+  apt: name=collectd=5.5.1-1build2 state=installed
+  when: ansible-distribution=="Ubuntu"
 
 - name: install collectd plugins and dependencies
   yum: pkg={{ item }}
@@ -17,6 +21,7 @@
     - gcc
     - python-devel
     - python-pip
+  when: ansible-distribution=="CentOS"
 
 - name: install python libs
   command: pip install docker-py psutil==4.1.0
@@ -30,19 +35,20 @@
   with_items:
     - collectd-disk-{{ collectd_version }}
   ignore_errors: yes
+  when: ansible-distribution=="CentOS"
 
 - name: create collectd user
   user: name=collectd createhome=no append=yes groups=docker system=yes
 
 - name: deploy collectd main config
-  template: src=collectd.conf.j2 dest=/etc/collectd.conf
+  template: src=collectd.conf.j2 dest={{ collectd_conf_path}}
   notify: restart collectd
 
 - name: ensure plugins dir
   file: path=/var/lib/collectd/plugins state=directory
 
 - name: deploy collectd types
-  copy: src=types dest=/var/lib/collectd/ 
+  copy: src=types dest=/var/lib/collectd/
   notify: restart collectd
 
 - name: deploy collectd lain plugins
@@ -50,10 +56,10 @@
   notify: restart collectd
 
 - name: ensure conf dir
-  file: path=/etc/collectd.d state=directory
+  file: path={{collectd_conf_dir}} state=directory
 
 - name: deploy collectd plugins config
-  template: src={{ item }}.j2 dest=/etc/collectd.d/{{ item }}
+  template: src={{ item }}.j2 dest={{collectd_conf_dir}}/{{ item }}
   with_items:
     - docker_daemon_monitor.conf
     - lain.conf
