fix dnsmasq bug

--- a/playbooks/roles/dnsmasq/tasks/main.yaml
+++ b/playbooks/roles/dnsmasq/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: install dnsmasq
   package:
     name: dnsmasq
-    state: present
+    state: latest
 
 - name: ensure dnsmasq.hosts
   file: path="{{ dnsmasq_hosts_path }}" state=touch
