--- a/playbooks/roles/node-change-labels/tasks/main.yaml
+++ b/playbooks/roles/node-change-labels/tasks/main.yaml
@@ -32,7 +32,7 @@
     group: root
     mode: 0644
 
-- name: restart docker
+- name: reload docker
   service:
     name: docker
     state: reloaded
