setup dns hijack when add new node

--- a/playbooks/roles/node/meta/main.yaml
+++ b/playbooks/roles/node/meta/main.yaml
@@ -6,6 +6,7 @@ dependencies:
   - role: prepare
   - role: firewall
   - role: dnsmasq
+  - role: dns-hijack
   - role: manager
   - role: docker
   - role: calico
