--- a/playbooks/roles/calico/tasks/main.yaml
+++ b/playbooks/roles/calico/tasks/main.yaml
@@ -141,7 +141,7 @@
 - name: run startup
   command: startup
   environment:
-    IP: "{{ node_ip }}"
+    IP: "{{ node_network }}"
     NODENAME: "{{ node_name }}"
 
 # Why run twice? Please see [here](https://github.com/projectcalico/calicoctl/blob/v1.2.1/calico_node/filesystem/etc/rc.local#L60)
