use registry.lain.local instead of registry.lain

--- a/playbooks/roles/bootstrap-registry-push/tasks/main.yaml
+++ b/playbooks/roles/bootstrap-registry-push/tasks/main.yaml
@@ -1,5 +1,5 @@
 - name: wait_for registry ready
-  command: curl -m 2 http://registry.lain/v2/
+  command: curl -m 2 http://registry.lain.local/v2/
   register: result
   until: "result.stdout.startswith('{')"
   retries: 50
@@ -9,7 +9,7 @@
 - name: push image to registry (may take minutes)
   docker_push:
     image: "{{ bootstrap_images[item] }}"
-    registry: registry.lain
+    registry: registry.lain.local
   with_items: "{{images_to_push|default([])}}"
 
 # vim: set filetype=ansible.yaml:
