--- a/playbooks/roles/ceph-fuse-new/tasks/main.yaml
+++ b/playbooks/roles/ceph-fuse-new/tasks/main.yaml
@@ -4,23 +4,26 @@
     state: present
 
 - name: create ceph conf dir
-  command: mkdir -p /etc/ceph
-  ignore_errors: yes
+  file: path=/etc/ceph state=directory
 
 - name: create ceph client_mountpoint dir
-  command: mkdir -p {{client_mountpoint}}
-  ignore_errors: yes
+  file: path={{client_mountpoint}} state=directory
 
 - name: copy keyring
   template: src=ceph.client.lain.keyring.j2 dest=/etc/ceph/ceph.client.{{ceph_account}}.keyring
-  mode: 0600
+
+- name: chmod 0600 keyring
+  file: path=/etc/ceph/ceph.client.{{ceph_account}}.keyring mode=0600
 
 - name: copy ceph.conf
   template: src=ceph.conf.j2 dest=/etc/ceph/ceph.conf
 
 - name: mount ceph
   command: ceph-fuse -n client.lain -r /lain /data/lain/cloud-volumes/
+  ignore_errors: yes
+
+- name: chmod 755 rc.local
+  file: path=/etc/rc.d/rc.local mode=0755
 
 - name: edit rc.local
   lineinfile: dest=/etc/rc.local line="ceph-fuse -n {{ceph_account}} -r {{ceph_mountpoint}} {{client_mountpoint}}" insertafter=EOF
- 
